apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: home-server
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
